--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ header{
 }
 
 
+.top1 svg:hover{
+    transform: scale(1.1);
+}
+
 #search{
     padding: 8px;
     border-radius: 5px;
@@ -32,7 +36,7 @@ h1{
 #links{
     margin-top: 20px;
     margin-left: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 a{
@@ -43,14 +47,18 @@ a{
     padding: 8px;
     border-radius: 10px;
     text-align: center;
+    transition-duration: 250ms;
 }
 
 
-#links a:hover{
+a:hover{
     background-color: black;
     color: white;
 }
 
+#cooking{
+    margin-top: auto;
+}
 
 aside{
     background-color: white;
@@ -76,8 +84,79 @@ aside{
     margin-right: 0px;
 }
 
+#register:hover{
+    background-color: rgb(226, 193, 44);
+    color: black;
+}
+
 
 main{
     background-color: rgb(230, 222, 222);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    padding: 50px;
 }
 
+.recipes-border{
+   height: 280px;
+   width: 180px;
+   background-color: white;
+   border-radius: 30px;
+   position: relative;
+}
+
+.picture {
+    position: absolute;
+    bottom: 150px;
+    left: 5px;
+}
+
+.recipe-name{
+    position: absolute;
+    top: 120px;
+    left: 2px;
+    text-align: center;
+}
+
+
+
+.star1{
+    position: absolute;
+    top: 178px;
+    left: 50px;
+}
+
+.star2{
+    position: absolute;
+    top: 178px;
+    left: 65px;
+}
+
+.star3{
+    position: absolute;
+    top: 178px;
+    left: 80px;
+}
+
+.star4{
+    position: absolute;
+    top: 178px;
+    left: 95px;
+}
+
+.star5{
+    position: absolute;
+    top: 178px;
+    left: 110px;
+}
+
+.hr{
+    position: absolute; 
+    top: 200px;
+    z-index: 5;
+    width: 100%;
+    height: 5px;
+    background-color: rgb(230, 222, 222);
+    border: none;
+}
