--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Annie+Use+Your+Telescope&family=Artifika&family=Atomic+Age&family=Barrio&family=Belleza&family=Benne&family=Bruno+Ace+SC&family=Cormorant:wght@300&family=Crafty+Girls&family=EB+Garamond&family=Federo&family=Fresca&family=Genos:ital@1&family=Geo&family=Glass+Antiqua&family=IM+Fell+DW+Pica+SC&family=IM+Fell+French+Canon+SC&family=Indie+Flower&family=Irish+Grover&family=Kotta+One&family=Kufam&family=Lacquer&family=Macondo&family=Major+Mono+Display&family=Marck+Script&family=Megrim&family=Play&family=Playfair:opsz@5..1200&family=Sedgwick+Ave&family=Share&family=Space+Mono&family=Sulphur+Point&family=Trade+Winds&family=Ubuntu+Mono&family=VT323&family=Zilla+Slab+Highlight&display=swap');
+
+
+
 body{
     display: grid;
     height: 100vh;
@@ -7,7 +11,7 @@ body{
 }
 
 header{
-    background-color: rgb(230, 222, 222);
+    background-color:#b7bba4;
     
 }
 
@@ -19,19 +23,46 @@ header{
 }
 
 
-.top1 svg:hover{
-    transform: scale(1.1);
+#search{
+    padding: 10px;
+    border-radius: 5px;
+    width: 300px;
+    background-color: rgb(248, 244, 244);
+    box-shadow: 5px 5px 10px gray;
 }
 
-#search{
-    padding: 8px;
-    border-radius: 5px;
-    width: 200px;
+#search:focus{
+    outline: 2px solid rgb(26, 97, 26);
+}
+
+#search-magnify{
+    position: relative;
+}
+
+#magnify{
+    position: absolute;
+    height: 30px;
+    width: 40px;
+    right: 2px;
+    top: 5px;
+
+}
+
+.icons svg{
+    transition-duration: 300ms;
+}
+
+.icons svg:hover{
+    fill: white;
+    
+
 }
 
 h1{
-    margin: 30px;
+    margin-left: 30px;
+    font-family: 'Space Mono', monospace;;
 }
+
 
 #links{
     margin-top: 20px;
@@ -41,18 +72,18 @@ h1{
 
 a{
     text-decoration: none;
-    color: black;
+    color: rgb(50, 49, 49);
     margin-right: 15px;
-    border: 1px solid black;
-    padding: 8px;
-    border-radius: 10px;
+    border: 1px solid gray;
+    padding: 12px 15px;
+    border-radius: 40px;
     text-align: center;
     transition-duration: 250ms;
 }
 
 
 a:hover{
-    background-color: black;
+    background-color: rgb(52, 52, 50);
     color: white;
 }
 
@@ -61,15 +92,32 @@ a:hover{
 }
 
 aside{
+    position: relative;
     background-color: white;
     grid-row: 1 / -1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 2;
+}
+
+
+.picture-shadow2{
+    position: absolute;
+    height: 105px;
+    width: 100px;
+    background-color: rgb(225, 222, 222);
+    left: 56px;
+    top: 163px;
+    border-radius: 80%;
+    opacity: 0.3;
+    box-shadow: 0px 5px 10px 10px rgb(174, 172, 172);
 }
 
 #name{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    font-family: 'Marck Script', cursive;
 }
 
 .signup{
@@ -80,83 +128,135 @@ aside{
 
 .signup a{
     margin-bottom: 15px;
-    width: 150px;
+    width: 170px;
     margin-right: 0px;
 }
 
+
+#login:hover{
+    background-color: rgb(91, 173, 126);
+
+}
+
 #register:hover{
-    background-color: rgb(226, 193, 44);
-    color: black;
+    background-color: rgb(209, 154, 77);
+    color: white;
 }
 
 
+
 main{
-    background-color: rgb(230, 222, 222);
+    background-image: url(./Képek/wwwwwwwwwwww.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     padding: 50px;
 }
 
 .recipes-border{
    height: 280px;
-   width: 180px;
+   width: 200px;
    background-color: white;
    border-radius: 30px;
    position: relative;
+   margin-bottom: 80px;
+   margin-top: 20px;
+   box-shadow: 5px 5px 10px grey;
+   margin-right: 0;
 }
 
 .picture {
     position: absolute;
     bottom: 150px;
-    left: 5px;
+    left: 15px;
+    z-index: 2;
 }
+
+.picture-shadow{
+    position: absolute;
+    height: 105px;
+    width: 120px;
+    background-color: rgb(156, 152, 152);
+    z-index: 1;
+    left: 30px;
+    border-radius: 80%;
+    opacity: 0.3;
+    box-shadow: 0px 5px 10px 10px rgb(156, 152, 152);
+    
+}
+
 
 .recipe-name{
     position: absolute;
     top: 120px;
-    left: 2px;
     text-align: center;
+    
 }
-
 
 
 .star1{
     position: absolute;
     top: 178px;
-    left: 50px;
+    left: 60px;
 }
 
 .star2{
     position: absolute;
     top: 178px;
-    left: 65px;
+    left: 75px;
 }
 
 .star3{
     position: absolute;
     top: 178px;
-    left: 80px;
+    left: 90px;
 }
 
 .star4{
     position: absolute;
     top: 178px;
-    left: 95px;
+    left: 105px;
 }
 
 .star5{
     position: absolute;
     top: 178px;
-    left: 110px;
+    left: 120px;
 }
 
 .hr{
     position: absolute; 
     top: 200px;
-    z-index: 5;
     width: 100%;
-    height: 5px;
-    background-color: rgb(230, 222, 222);
+    height: 3px;
+    background-color: rgb(199, 199, 199);
     border: none;
+}
+
+.time{
+    position: absolute;
+    top: 220px;
+    left: 10px;
+    color: grey;
+}
+
+.button{
+    position: absolute;
+    width: 80px;
+    height: 35px;
+    top:228px;
+    left: 105px;
+    border-radius: 5px;
+    color: rgb(20, 138, 20);
+    background-color: rgb(200, 233, 200);
+    transition-duration: 250ms;
+    border: none;
+}
+
+.button:hover{
+    background-color: rgb(91, 173, 126);
+    color: white;
 }
