--- a/Index/style.css
+++ b/Index/style.css
@@ -50,6 +50,7 @@ header{
 
 .icons svg{
     transition-duration: 300ms;
+
 }
 
 .icons svg:hover{
@@ -89,11 +90,12 @@ h1{
     border-radius: 40px;
     text-align: center;
     transition-duration: 250ms;
+    box-shadow: 5px 5px 10px gray;
 }
 
 
 .links a:hover{
-    background-color: rgb(191, 180, 117);
+    background-color: rgb(208, 195, 120);
     color: white;
 }
 
@@ -172,7 +174,7 @@ main{
 .recipes-border{
    height: 280px;
    width: 200px;
-   background-color: rgb(209, 211, 211);
+   background-color: rgb(232, 235, 235);
    border-radius: 30px;
    position: relative;
    margin-bottom: 80px;
@@ -267,9 +269,12 @@ main{
     background-color: rgb(200, 233, 200);
     transition-duration: 250ms;
     border: none;
+    box-shadow: 5px 5px 10px gray;
 }
 
 .button:hover{
     background-color: rgb(91, 173, 126);
     color: white;
 }
+
+
