--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ aside{
 
 
 main{
-    background-image: url(../Képek/wwwwwwwwwwww.avif);
+    background-image: url(./Képek/wwwwwwwwwwww.avif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
