--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 #background{
-    background-image: url(../Képek/tomatoes-near-mushrooms-herbs.jpg);
+    background-image: url(../Pictures/tomatoes-near-mushrooms-herbs.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 
